# DDSFunctionGenerator

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: actions.yml  component-test.yml  fort-tests.yml  latex-documentation.yml  static-code-analysis.yml
ContinousIntegration/: .gitignore  run_c_static_code_analysis.sh  run_component_tests.sh  run_static_code_analysis.sh
ContinuousIntegration/: .gitignore  run_c_static_code_analysis.sh  run_code_formatter.sh  run_component_tests.sh  run_python_static_code_analysis.sh
DevOps/Script/: README.md  run_code_formatter.sh  run_component_tests.sh  run_python_static_code_analysis.sh
Documentation/Diagrams/: ArchitectureOverview.plantuml  ArchitectureOverview.tex
Hardware/DDSFunctionGenerator/: .gitignore  ADC.kicad_sch  ADC.sch  Amplifier.kicad_sch  Amplifier.sch  Attenuators.kicad_sch  Attenuators.sch  ComputerInterface.kicad_sch  ComputerInterface.sch  DDSFunctionGenerator.kicad_pcb  DDSFunctionGenerator.kicad_prl  DDSFunctionGenerator.kicad_pro  DDSFunctionGenerator.kicad_sch  DDSFunctionGenerator.pro  DDSFunctionGenerator.sch  DDSSynthesizer.kicad_sch  DDSSynthesizer.sch  Mechanic.kicad_sch  Mechanic.sch  Microcontroller.kicad_sch  Microcontroller.sch  PowerSupply.kicad_sch  PowerSupply.sch  README.md  UserInterface.kicad_sch  UserInterface.sch  fp-lib-table  sym-lib-table
Hardware/DDSFunctionGenerator/3DModels/: BNC_Amphenol_B6252HB-NPP3G-50_Horizontal.step  MOLEX_73412-0110.step
Hardware/DDSFunctionGenerator/DDSFunctionGenerator.pretty/: DG128-5.0-02P-14-00A.kicad_mod  EN11-VNB1BQ15.kicad_mod  Transformer_B62152_8.3.kicad_mod  U.FL_Molex_MCRF_73412-0110_Vertical.kicad_mod
Mechanic/Chassis/FreeCAD/: Chassis.FCStd  Chassis.FCStd1
Mechanic/KiCADModels/: generate.sh
Mechanic/KiCADModels/FreeCAD/: BNC_Amphenol_B6252HB-NPP3G-50_Horizontal.FCStd  DG128-5.0-02P-14-00A.FCStd  DG128-5.0-02P-14-00A.FCStd1  DG128-5.0-02P-14-00A.stl1  EN11-VNB1BQ15.FCStd1  MOLEX_73412-0110.scad  Transformer_B62152_8.3.FCStd
Mechanic/KiCADModels/OpenSCAD/: EN11-VNB1BQ15.scad  LF_SPXO018035.scad  Transformer_B62152_8.3.scad
Mechanic/MechanicOverview/: .gitignore  ChassisBottom.scad  ChassisTop.scad  DebugPanel.scad  GenericChassis.scad  GenericChassis2D.scad  GenericFrontPanel.scad  MechanicOverview.scad  MechanicOverview.stl  USBConnector.scad
Simulation/FirmwarePCSimulator/: README.md  device_under_test.py  gui.ui  main.py
Simulation/FirmwarePCSimulator/Wrapper/: CMakeLists.txt  simulation.c
Simulation/LTSPice/Filter/: filter.plt
Simulation/LTSPice/Transformer/: transformer.plt
Software/: .gitignore  .mxproject  CMakeLists.txt  Firmware.ioc  README.md  STM32F030K6Tx_FLASH.ld
Software/Common/BusinessLogic/: .gitignore  CMakeLists.txt  Makefile  SCPICallbacks.fs  core.fs  dds_buisness_logic_wrapper.c  dds_buisness_logic_wrapper.h  dds_business_logic_wrapper.c  dds_business_logic_wrapper.h  dds_forth_scripts_loader.h  dds_forth_scripts_loader_sim.c  dds_forth_scripts_loader_sim.h  dds_keyboard_keys.h  dds_lib_export_defs.h  dds_scpi_gate.c  dds_scpi_gate.h  dds_u8g2_callbacks.h  dds_u8g2_callbacks_sim.c  dds_user_interface.c  dds_user_interface.h  dds_user_interface_sim.h  dds_view_main.c  dds_view_main.h  dds_view_settings.c  dds_view_settings.h  dds_zforth_callbacks.c  dds_zforth_callbacks.h  scpi.fs  simulation.c  simulation.cpp  zfconf.h
Software/Common/Libraries/: .gitignore
Software/Firmware/BusinessLogic/: Makefile  SCPI.fs  simulation.c
Software/Inc/: main.h
Software/NUCLEO-F091RC/: .cproject  .project  README.md
Software/NUCLEO-F091RC/Src/: main.c  stm32f0xx_it.c
Software/Simulation/: dds_forth_scripts_loader_sim.c  dds_forth_scripts_loader_sim.h  dds_u8g2_callbacks_sim.c
Software/Src/: main.c  stm32f0xx_hal_msp.c
Software/TargetFirmware/: .gitignore
Test/ComponentTest/: README.md  device_under_test.py  test_buisness_logic.py
Test/UnitTest/: TestFramework.fs
documentation/diagrams/: ArchitectureOverview.tex
hardware/DDSFunctionGenerator/: ADC.sch  Amplifier.sch  Attenuators.sch  ComputerInterface.sch  DDSFunctionGenerator  DDSFunctionGenerator.kicad_pcb  DDSFunctionGenerator.pro  DDSFunctionGenerator.sch  DDSSynthesizer.sch  LogicLevelOutput.sch  Microcontroller.sch  MountingPoints.sch  NoiseGenerator.sch  NumericallyControlledOscillator.dcm  NumericallyControlledOscillator.lib  SignalSourceSelector.sch  UserInterface.sch
hardware/DDSFunctionGenerator/3DModels/: BNC_Amphenol_B6252HB-NPP3G-50_Horizontal.step  DG128-5_0-02P-14-00A.step  EN11-VNB1BQ15.step  LF_SPXO018035.step  Transformer_B62152_8_3.step  Transformer_Toroid_Horizontal_D9.0mm_Amidon-T30.step
hardware/DDSFunctionGenerator/DDSFunctionGenerator.pretty/: BNC_Amphenol_B6252HB-NPP3G-50_Horizontal.kicad_mod  EN11-VNB1BQ15.kicad_mod  LF SPXO018035.kicad_mod  LF_SPXO018035.kicad_mod  Transformer_B62152_8.3.kicad_mod  Transformer_Toroid_Horizontal_D9.0mm_Amidon-T30.kicad_mod
hardware/DDSRFGeneratorRFBoard/: Amplifier.sch  Attenuators.sch  ComputerInterface.sch  DDSRFGenerator.kicad_pcb  DDSRFGenerator.pro  DDSRFGenerator.sch  DDSSynthesizer.sch  Microcontroller.sch  MountingPoints.sch  NumericallyControlledOscillator.lib  UserInterface.sch  sym-lib-table
mechanical/Chassis/OpenSCAD/: ChassisBottom.csg  (+1 more)
simulation/filter/: filter.asc
simulation/transformer/: transformer.asc
software/BL/: SCPI.fs  SCPICallbacks.fs
software/HAL/: .mxproject
software/firmware/: .mxproject  Makefile  firmware.ioc
software/forth/: SCPI.fs  tutorial.fs
tests/BL/: TestFramework.fs  UT_SCPI.fs
(+25 files in other folders)
